# CUDA_apriltag

./: .gitignore  CMakeLists.txt  DETECTION_IMPROVEMENTS.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  IMPROVEMENTS_IMPLEMENTED.md  PERFORMANCE_REPORT.md  QUICK_START.md  README.md  TIMING_BREAKDOWN.md  TUNING_GUIDE.md  camera_intrinsics.json.example  capture_log.txt  config.json  config.json.example
DOCs/: GPU based AprilTag Engine on Orin NX.rtf
include/: apriltag_gpu.h  camera_controls.h  camera_intrinsics.h  config.h  gpu_context.h  image_preprocessor.h
python/: README_CALIBRATION.md  binding.cpp  calibrate_camera.py  example_calibration.py  test_chessboard_detection.py
src/: apriltag_gpu.cu  camera_controls.cpp  camera_intrinsics.cpp  camera_utility.cpp  config.cpp  corner_refinement.cu  gpu_context.cpp  image_preprocessor.cu  main.cpp  quad_extraction_benchmark.cpp  tune_camera_with_tag.cpp
